@@ -2,6 +2,10 @@
 # 1. for display continuity sake please use 2 spaces instead of tabs
 # 2. make sure that lines break at 80 chars for constricted display situations
 #<-------------------------------- 80 chars ---------------------------------->#
+2016-06-04 Giuseppe Aruta  <giuseppe_aruta@yahoo.it>
+  * Add zoom shortcuts to status bar.
+    a) Double clicking on scale section opens Zoom to scale plugin
+    b) Double clicking on coordinate section opens Zoom to coordinates plugin
 
 2016-06-01 mmichaud <m.michael.michaud@orange.fr>
   * Remove the 1.124 factor to compute -Xmx as the memory used by the os/jvm may
